--- a/templates/engineer.html
+++ b/templates/engineer.html
@@ -5,9 +5,9 @@
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: {{ id }}</li>
-            <li class="list-group-item">Email: <a href="mailto:{{ email }}">{{ email }}</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/{{ github }}" target="_blank" rel="noopener noreferrer">{{ github }}</a></li>
+            <li class="list-group-item"><i class="fas fa-id-card-alt"></i> ID: {{ id }}</li>
+            <li class="list-group-item"><i class="far fa-envelope"></i> Email: <a href="mailto:{{ email }}">{{ email }}</a></li>
+            <li class="list-group-item"><i class="fab fa-github"></i> GitHub: <a href="https://github.com/{{ github }}" target="_blank" rel="noopener noreferrer">{{ github }}</a></li>
         </ul>
     </div>
 </div>
