--- a/templates/intern.html
+++ b/templates/intern.html
@@ -5,9 +5,9 @@
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: {{ id }}</li>
-            <li class="list-group-item">Email: <a href="mailto:{{ email }}">{{ email }}</a></li>
-            <li class="list-group-item">School: {{ school }}</li>
+            <li class="list-group-item"><i class="fas fa-id-card-alt"></i> ID: {{ id }}</li>
+            <li class="list-group-item"><i class="far fa-envelope"></i> Email: <a href="mailto:{{ email }}">{{ email }}</a></li>
+            <li class="list-group-item"><i class="fas fa-graduation-cap"></i> School: {{ school }}</li>
         </ul>
     </div>
 </div>
